--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint",
+    "prepare": "husky",
+    "commit": "cz"
   },
   "private": true,
   "dependencies": {
@@ -26,13 +29,33 @@
     "@angular-devkit/build-angular": "^19.1.6",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "19.0.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.16.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "lint-staged": "^15.4.3",
+    "prettier": "3.5.0",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "8.18.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,html,css}": [
+      "prettier --write --ignore-unknown",
+      "eslint --fix"
+    ]
   }
 }
