feat: lib setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,11 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@ngxpert/input-otp": [
+        "./dist/ngxpert/input-otp"
+      ]
+    },
     "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
