--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.1.3",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
     "@angular/forms": "^19.1.0",
+    "@angular/material": "^19.1.3",
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@radix-ng/primitives": "^0.31.0",
     "@tailwindcss/postcss": "^4.0.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -49,6 +55,7 @@
     "lint-staged": "^15.4.3",
     "ng-packagr": "^19.1.0",
     "prettier": "3.5.0",
+    "shiki": "^2.3.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.18.0"
   },
