test: cypress setup WIP

--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "watch:lib": "ng build @ngxpert/input-otp --watch --configuration development",
-    "test": "ng test",
     "lint": "ng lint",
     "prepare": "husky",
-    "commit": "cz"
+    "commit": "cz",
+    "test": "npm run ci:cy-run",
+    "ci:cy-run": "start-server-and-test ci:start-server http://localhost:4200 cy:run",
+    "ci:start-server": "serve -l 4200 -s ./dist/input-otp/browser",
+    "build:lib": "ng build @ngxpert/input-otp --configuration production && npm run copy",
+    "postbuild:lib": "npm run build --prefix ./projects/ngxpert/input-otp",
+    "test:lib": "ng test @ngxpert/input-otp",
+    "test:lib:headless": "cross-env CI=true npm run test:lib",
+    "copy": "cpx README.md dist/ngxpert/input-otp"
   },
   "private": true,
   "dependencies": {
@@ -42,7 +49,10 @@
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.0.2",
+    "cpx": "^1.5.0",
+    "cypress": "^14.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.16.0",
     "husky": "^9.1.7",
@@ -55,7 +65,9 @@
     "lint-staged": "^15.4.3",
     "ng-packagr": "^19.1.0",
     "prettier": "3.5.0",
+    "serve": "^14.2.4",
     "shiki": "^2.3.2",
+    "start-server-and-test": "^2.0.10",
     "typescript": "~5.7.2",
     "typescript-eslint": "8.18.0"
   },
