test: add specs

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky",
     "commit": "cz",
     "test": "npm run ci:cy-run",
-    "ci:cy-run": "start-server-and-test ci:start-server http://localhost:4200 cy:run",
+    "ci:cy-run": "start-server-and-test ci:start-server http://localhost:4200 e2e",
+    "e2e": "cypress run",
     "ci:start-server": "serve -l 4200 -s ./dist/input-otp/browser",
     "build:lib": "ng build @ngxpert/input-otp --configuration production && npm run copy",
     "postbuild:lib": "npm run build --prefix ./projects/ngxpert/input-otp",
@@ -51,7 +52,10 @@
     "@types/jasmine": "~5.1.0",
     "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.0.2",
+    "clipboardy": "^4.0.0",
+    "copyfiles": "^2.4.1",
     "cpx": "^1.5.0",
+    "cross-env": "^7.0.3",
     "cypress": "^14.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.16.0",
