--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@angular/compiler-cli": "^19.1.0",
     "@commitlint/cli": "^19.7.1",
     "@commitlint/config-conventional": "^19.7.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@types/jasmine": "~5.1.0",
     "angular-cli-ghpages": "^2.0.3",
     "angular-eslint": "19.0.2",
