--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -32,6 +32,7 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
         env:
           HUSKY_SKIP_INSTALL: true
+          HUSKY_SKIP_HOOKS: true
         run: npm ci
 
       - name: Lint
@@ -50,4 +51,5 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          HUSKY_SKIP_HOOKS: true
         run: npx semantic-release --debug
