--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,9 @@ jobs:
           node-version: '22.x'
 
       - name: Install dependencies
+        env:
+          HUSKY_SKIP_INSTALL: true
+          HUSKY_SKIP_HOOKS: true
         run: npm ci
 
       - name: Build library
@@ -29,6 +32,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          HUSKY_SKIP_HOOKS: true
         run: npx semantic-release
 
       - name: Deploy to GitHub Pages
