--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Install dependencies
         env:
-          HUSKY_SKIP_INSTALL: true
-          HUSKY_SKIP_HOOKS: true
+          HUSKY: 0
         run: npm ci
 
       - name: Build library
@@ -32,7 +31,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          HUSKY_SKIP_HOOKS: true
+          HUSKY: 0
         run: npx semantic-release
 
       - name: Deploy to GitHub Pages
