--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "copyfiles": "^2.4.1",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
-    "cypress": "^14.0.3",
+    "cypress": "15.8.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.16.0",
     "husky": "^9.1.7",
