--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Make a Release and Deploy on GitHub Pages
+name: Deploy on GitHub Pages
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '22.x'
+          node-version: '24.x'
 
       - name: Install dependencies
         env:
@@ -26,13 +26,6 @@ jobs:
 
       - name: Build app
         run: npm run build -- --base-href "/input-otp/"
-
-      - name: Release
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          HUSKY: 0
-        run: npx semantic-release
 
       - name: Deploy to GitHub Pages
         env:
