--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "copy": "cpx README.md dist/ngxpert/input-otp"
   },
   "dependencies": {
-    "@angular/animations": "^19.1.0",
+    "@angular/animations": "^20.3.15",
     "@angular/cdk": "^19.1.3",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
+    "@angular/common": "^20.3.15",
+    "@angular/compiler": "^20.3.15",
+    "@angular/core": "^20.3.15",
+    "@angular/forms": "^20.3.15",
     "@angular/material": "^19.1.3",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/router": "^19.1.0",
+    "@angular/platform-browser": "^20.3.15",
+    "@angular/platform-browser-dynamic": "^20.3.15",
+    "@angular/router": "^20.3.15",
     "@tailwindcss/postcss": "^4.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,9 +42,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.6",
-    "@angular/cli": "^19.1.6",
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular/build": "^20.3.13",
+    "@angular/cli": "^20.3.13",
+    "@angular/compiler-cli": "^20.3.15",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.7.1",
     "@semantic-release/changelog": "^6.0.3",
@@ -68,13 +68,14 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^15.4.3",
-    "ng-packagr": "^19.1.0",
+    "ng-packagr": "^20.3.2",
+    "postcss": "^8.5.3",
     "prettier": "3.5.0",
     "semantic-release": "^24.2.3",
     "serve": "^14.2.4",
     "shiki": "^2.3.2",
     "start-server-and-test": "^2.0.10",
-    "typescript": "~5.7.2",
+    "typescript": "~5.9.3",
     "typescript-eslint": "^8.33.1"
   },
   "config": {
