--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "ng-packagr": "^20.3.2",
     "postcss": "^8.5.3",
     "prettier": "3.5.0",
-    "semantic-release": "^24.2.3",
+    "semantic-release": "25.0.2",
     "serve": "^14.2.4",
     "shiki": "^2.3.2",
     "start-server-and-test": "^2.0.10",
